css assets need to be in the same folder as css, also fixed spacing between links

--- a/css/index.css
+++ b/css/index.css
@@ -9,15 +9,15 @@ Experiment with deleting lines of code from the CSS to see how it affects the we
 */
 
 body {
-  background-image: url("circle-blues.PNG");
-  background-repeat: repeat-y;
+  background-color: #cccccc;
+  background-image: url('trees.png');
   padding: 0;
   margin: 0;
   font-family: Georgia, "Times New Roman", Times, serif;
   font-size: 18px;
   line-height: 150%;
   color: #333;
-  background-color: #cccccc;
+
 
 }
 
@@ -55,7 +55,7 @@ h1{
   height:45px;
   width:50%;
   padding-top:5px;
-  padding-right:10px;
+
   background:white;
   color:grey;
   text-align: right;
@@ -76,6 +76,7 @@ h2 {
 
 
 a {
+  padding: 10px;
   font-size:16px;
   text-decoration: none;
   color:#dddddd;
